# flask-api-2.0

./: .env  README.md  app.py  config.py  pyproject.toml
api/: views.py
api/resources/: user.py
instance/: db.sqlite3
models/: users.py
