[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Abhishek Jaglan <jaglanabhishek08@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^2.2.3"
Flask-RESTful = "^0.3.9"
python-dotenv = "^1.0.0"
Flask-SQLAlchemy = "^3.0.3"
Flask-Migrate = "^4.0.4"
flask-marshmallow = ">=0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
setuptools = "^75.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
